# s1_prg_lab56

./: CMakeLists.txt  README.md  main.c  s1_prg_lab56.odt
src/: main.c  utils.c
